# aura

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml  render.yaml  vercel.json
.agents/rules/: collect-requirements.md  frontend-design.md
api/: index.py
backend/: .env.example  app.py  requirements.txt
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AISidebar.tsx  CommandRail.tsx  Dashboard.tsx
frontend/src/components/ui/: dialog.tsx  input.tsx
frontend/src/lib/: api.ts  firebase.ts
scripts/: index_workflows.py  run_bot.py  seed_db.py
src/casper_bot/: __init__.py  config.py  main.py
src/casper_bot/agent/: __init__.py  core.py  executor.py  judge.py  memory.py  planner.py  prompts.py  state.py
src/casper_bot/bot/: __init__.py  router.py
src/casper_bot/bot/handlers/: __init__.py  actions.py  chat.py  start.py
src/casper_bot/bot/keyboards/calendar/: __init__.py  calendar_buttons.py
src/casper_bot/bot/keyboards/notes/: __init__.py  notes_buttons.py
src/casper_bot/bot/middlewares/: __init__.py  logging.py  rate_limit.py  user_context.py
src/casper_bot/db/: models.py  repository.py  session.py
src/casper_bot/services/: embeddings.py  telegram_api.py  vector_store.py
src/casper_bot/tools/: __init__.py  apps.py  reminders.py  search.py  utilities.py  weather.py
src/casper_bot/utils/: helpers.py  logger.py
tests/: test_agent.py  test_handlers.py  test_tools.py
