[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-agent"
version = "0.1.0"
description = "A modular, AI-powered Telegram bot scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.27.0",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-supervisor>=0.0.31",
    "pydantic-settings>=2.11.0",
    "tavily-python>=0.3.3",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
